2011-01-20  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to #17073: Unset fsMod.recentIDs when opening module via JS jump() (Thanks to Stefan Galinski)

2011-01-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17156: htmlArea RTE: Disable Cell merge button in FF when less than two cells are selected

2011-01-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug in tx_em_Connection_ExtDirectServer (from em svn)

2011-01-19  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #16462: Use constant LF instead of chr(10) (Thanks to Georg Ringer)

2011-01-19  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17138: Superfluous backspace in Error Message if no Install Tool Password is set (Thanks to Sebastian Michaelsen)
	* Fixed bug #17144: Adjust CSH tooltip show and hide delay (Thanks to Jens Hoffmann and Lars Zimmermann)
	* Follow-up to #17073: CSS clean-up
	* Fixed bug #17127: Streamline usage of ExtJS loading indicators
	* Follow-up to #17067: Fixed error in Internet Explorer

2011-01-19  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17067: Overwork the JavaScript LLL generation (Thanks to Steffen Gebert)

2011-01-19  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #17075: No possibility to update the module menu via setUpdateSignal
	* Fixed bug #17150: Workspaces non-admin user cannot send to next stage (Thanks to Sonja Scholz)

2011-01-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16045: htmlArea RTE: Merging table cells using context menu doesn't work in Firefox

2011-01-18  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17041: CSH tooltip often gets in the way of the field it is supposed to provide help for (Thanks to Stanislas Rolland)
	* Fixed bug #16253: Displaced Arrows in TCEforms (Thanks to Jo Hasenau)
	* Fixed bug #16081: Different margins of input fields in TCEforms
	* Fixed bug #17126: Extension list lacks some space in old Extension Manager (Thanks to Tomas Norre Mikkelsen)
