@@ -5,6 +5,7 @@
 2011-01-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #17156: htmlArea RTE: Disable Cell merge button in FF when less than two cells are selected
+	* Fixed bug #17157: htmlArea RTE: Not enabled in various browser/system combinations
 
 2011-01-19  Steffen Kamper  <steffen@typo3.org>
 
